Added styles updates and images

--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -27,6 +27,26 @@ body {
     font-weight: 200;
 }
 
+#animationTitle {
+    font-family: Haettenschweiler;
+    font-size: 40px;
+    font-weight: 200;
+    color: darkgoldenrod;
+    margin: 30px;
+}
+
+#animationCreator {
+    font-family: 'Trebuchet MS';
+    font-weight: 200;
+    color: darkgoldenrod;
+}
+
+#animationSpace {
+    width: 750px;
+    height: 750px;
+    box-shadow: 2px 2px 3px #111111;
+}
+
 #univInfo {
     line-height: 12px;
 }
@@ -49,7 +69,7 @@ header {
     padding: 30px;
 }
 
-#submitButtonQuiz{
+#submitButtonQuiz {
     border-radius: 10px;
     width: 75px;
     height: 35px;
