--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -3,48 +3,63 @@ body {
     font-family: Verdana;
     width: 95%;
     text-size-adjust: auto;
-
+    padding: 0;
+    margin: 0;
+    
     min-width: 360px;
     min-height: 486px;
 
     max-width: 3024px;
     max-height: 1964px;
-    margin-right: 20px;
 }
 
-#navBar {
+.navBar {
     position: sticky;
     z-index: 1100;
     top: 10px;
-    width: 74px;
-    height: 63px;
-    margin-left: 70px;
+    width: 65px;
+    height: 65px;
+    margin-left: 30px;
     border-radius: 20px;
     top: 10px;
     box-shadow: 2px 2px 3px #111111;
     background-color: #FFF9D2;
 }
 
-.dropdown-center{
-    border: none;
-}
-
-.dropdown-menu{
-    background-color: black;
-}
-
-
-
-.dropdown-header{
-    color: #FF8473;
-}
-
-.btn{
-    border: none;
-}
-
 #menuButton {
     margin: auto;
+    border: none;
+    padding: 7px 0px 0px 7px;
+    border-radius: 20px;
+    background-color: transparent;
+}
+
+#menuButtonsList {
+    list-style: none;
+    padding-left: 0;
+    align-items: left;
+    justify-content: left;
+    padding-top: 28px;
+}
+
+.options {
+    padding-bottom: 28px;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
+.hide {
+    visibility: hidden;
+}
+
+.menuButtons {
+    background-color: #FFF9D2;
+    box-shadow: 2px 2px 3px #111111;
+
+    width: 65px;
+    height: 65px;
+
+    border: none;
     border-radius: 20px;
 }
 
