--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -71,6 +71,12 @@ h6 {
     margin-top: -20px;
 }
 
+.greeting, h4{
+    color: #252525;
+    text-shadow: 2px 2px 3px #fff9d2;
+    font-style: oblique;
+}
+
 .mainPictures {
     border-radius: 200px;
     box-shadow: 2px 2px 3px #111111;
