--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -72,7 +72,7 @@ h6 {
     margin-top: -20px;
 }
 
-.greeting, h4{
+.greeting, h4, h2{
     color: #252525;
     text-shadow: 2px 2px 3px #fff9d2;
     font-style: oblique;
