Contact form fixes

--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -1,3 +1,7 @@
+html {
+    background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
+}
+
 body {
     background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
     font-family: Verdana;
@@ -72,7 +76,9 @@ h6 {
     margin-top: -20px;
 }
 
-.greeting, h4, h2{
+.greeting,
+h4,
+h2 {
     color: #252525;
     text-shadow: 2px 2px 3px #fff9d2;
     font-style: oblique;
@@ -119,6 +125,11 @@ p {
     resize: none;
 }
 
+.formButtons:focus {
+    outline: none;
+    box-shadow: 2px 2px 3px #FF8473;
+}
+
 ::placeholder {
     padding: 5px;
     margin: 10px;
@@ -152,40 +163,34 @@ textarea {
     width: 80%;
     height: 150px;
     border-radius: 5px;
-    box-sizing: border-box;
-    overflow: auto;
 }
 
-.formButtons::-webkit-scrollbar {
-    width: 15px;
+#message::-webkit-scrollbar {
+    padding: 10px;
+    margin: 5px;
 }
 
-.formButtons::-webkit-scrollbar-track {
-    height: 50%;
+#message::-webkit-scrollbar-track {
     background: #FF8473;
-    margin-right: 10px;
     border: 2px solid #252525;
     border-radius: 30px;
-    box-sizing: border-box;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.formButtons::-webkit-scrollbar-button{
-    background-color: #FFF9D2;
-    border-radius: 30px;
-    visibility: hidden;
-}
-
-.formButtons::-webkit-scrollbar-thumb {
+#message::-webkit-scrollbar-thumb {
     background-color: #FFF9D2;
     border-radius: 30px;
     width: 90%;
     border: 2px solid #252525;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 #submitButton:hover {
     background-color: #252525;
     box-shadow: 2px 2px 3px #FF8473;
-
+    color: #FF8473;
 }
 
 li {
