--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -212,6 +212,7 @@ footer {
     box-shadow: 2px 2px 3px #111111;
     padding: 10px;
     margin: auto;
+    margin-top: 10px;
     border-radius: 20px;
     box-sizing: border-box;
 }
