--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -90,7 +90,7 @@ h2 {
     border-radius: 10px;
     box-shadow: 2px 2px 3px #111111;
     padding: 20px;
-    margin: 10px;
+    margin: auto;
     width: 100%;
 }
 
