Added Projects Page

--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -2,6 +2,10 @@ html {
     background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
     font-family: Verdana;
@@ -72,7 +76,7 @@ body {
 }
 
 .greeting,
-h4,
+#socialMedia,
 h2 {
     color: #252525;
     text-shadow: 2px 2px 3px #fff9d2;
@@ -85,7 +89,8 @@ h2 {
     margin: 20px;
 }
 
-.infoCard {
+.infoCard,
+.projectCard {
     background-color: #fff9d2;
     border-radius: 10px;
     box-shadow: 2px 2px 3px #111111;
@@ -98,7 +103,8 @@ h2 {
 #summary,
 #frontEnd,
 #objectOriented,
-#other {
+#other,
+.projectHeadings {
     color: #FF8473;
     text-shadow: 2px 2px 5px #FF8473;
     font-style: oblique;
@@ -132,6 +138,7 @@ p {
     padding: 5px;
     margin: 10px;
     color: #fff9d2;
+    font-size: 14px;
 }
 
 #firstName {
@@ -163,12 +170,14 @@ textarea {
     border-radius: 5px;
 }
 
-#message::-webkit-scrollbar {
+#message::-webkit-scrollbar,
+.container::-webkit-scrollbar {
     padding: 10px;
     margin: 5px;
 }
 
-#message::-webkit-scrollbar-track {
+#message::-webkit-scrollbar-track,
+.container::-webkit-scrollbar-track {
     background: #FF8473;
     border: 2px solid #252525;
     border-radius: 30px;
@@ -177,7 +186,8 @@ textarea {
     margin-bottom: 20px;
 }
 
-#message::-webkit-scrollbar-thumb {
+#message::-webkit-scrollbar-thumb,
+.container::-webkit-scrollbar-thumb {
     background-color: #FFF9D2;
     border-radius: 30px;
     width: 90%;
@@ -217,18 +227,58 @@ footer {
     box-sizing: border-box;
 }
 
-.progLangCube:hover{
+.progLangCube:hover {
     box-shadow: 2px 2px 3px #FF8473;
 }
 
-.progLangName, .softwareName, .techName{
+.progLangName,
+.softwareName,
+.techName {
     margin: auto;
     font-size: 10px;
     font-style: oblique;
     font-weight: bold;
 }
 
-.progLangIcon{
+.progLangIcon {
     z-index: 1100;
     overflow: clip;
+}
+
+/* PROCECTS PAGE*/
+
+#projectContainer {
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    width: 65%;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 24px;
+    border-radius: 20px;
+    gap: 12px;
+}
+
+#projectContainer,
+.projectCard {
+    flex: 0 0 100%;
+    padding: 24px;
+    border-radius: 20px;
+    scroll-snap-align: start;
+}
+
+.projectLang {
+    border-radius: 200px;
+    box-shadow: 2px 2px 3px #111111;
+    margin: 20px;
+    background-color: #252525;
+}
+
+.projectTitle {
+    color: #fff9d2;
+    background-color: #252525;
+    border-radius: 200px;
+    box-shadow: 2px 2px 3px #111111;
+    margin: 10px;
+    padding: 5px;
+    width: 80%;
 }
