Added github link image with a different color

--- a/Styles/styleSheet1.css
+++ b/Styles/styleSheet1.css
@@ -283,7 +283,7 @@ footer {
 .sourceCode {
     border-radius: 200px;
     box-shadow: 2px 2px 3px #252525;
-    background-color: #FF8473;
+    background-color: #252525;
 }
 
 .projectTitle {
