--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -1,7 +1,3 @@
-html {
-    background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
-}
-
 * {
     box-sizing: border-box;
 }
@@ -20,12 +16,6 @@ body {
     text-size-adjust: auto;
     padding: 0;
     margin: 0;
-
-    min-width: 360px;
-    min-height: 486px;
-
-    max-width: 3024px;
-    max-height: 1964px;
 }
 
 .space3px {
@@ -272,14 +262,14 @@ footer {
     transition: 0.3s ease;
 }
 
-.progLangCube:hover {
+.progLangCube:hover, .projectTitle:hover {
     background-color: #FF8473;
     box-shadow: 0px 10px 15px #FF8473;
-    color: #ffffff;
+    color: #fff9d2;
     transform: translateY(-5px);
 }
 
-.progLangCube:active {
+.progLangCube:active, .projectTitle:active {
     transform: translateY(-1px);
 }
 
@@ -291,6 +281,7 @@ footer {
     font-size: 10px;
     font-style: oblique;
     font-weight: bold;
+    transition: 0.1s ease;
 }
 
 .progLangIcon {
@@ -335,4 +326,35 @@ footer {
     margin: 10px;
     padding: 5px;
     width: 80%;
+    transition: 0.3s ease;
 }
+
+.projectDescription{
+    padding: 5px;
+    margin: 5px; 
+}
+
+#imageContainer {
+    display: flex;
+    overflow-x: scroll;
+    padding: 24px;
+    width: 50%;
+    scroll-snap-type: x mandatory;
+    scroll-padding: 15px;
+    border-radius: 20px;
+    gap: 10px;
+}
+/*
+#imageContainer,
+.imageCard {
+    flex: 0 0 100%;
+    padding: 20px;
+    border-radius: 20px;
+    scroll-snap-align: start;
+}
+
+.imageCard img{
+    border-radius: 20px;
+    box-shadow: 2px 2px 3px #111111;
+}
+*/
