Changes and fixes

--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -249,7 +249,7 @@ footer {
     box-shadow: 2px 2px 3px #111111;
     width: 100%;
     padding: 10px;
-    margin: auto;
+    margin: 20px;
 }
 
 .progLangCube {
