--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -298,7 +298,7 @@ footer {
     display: flex;
     overflow-x: scroll;
     padding: 24px;
-    width: 90%;
+    width: 99%;
     scroll-snap-type: x mandatory;
     scroll-padding: 24px;
     border-radius: 20px;
@@ -338,28 +338,102 @@ footer {
     margin: 5px;
 }
 
-#imageContainer {
-    display: flex;
-    overflow-x: scroll;
-    padding: 24px;
-    width: 50%;
-    scroll-snap-type: x mandatory;
-    scroll-padding: 15px;
-    border-radius: 20px;
-    gap: 10px;
-}
+/* Image Slideshow */
 
-/*
-#imageContainer,
-.imageCard {
-    flex: 0 0 100%;
-    padding: 20px;
+.projectImages {
     border-radius: 20px;
-    scroll-snap-align: start;
-}
-
-.imageCard img{
-    border-radius: 20px;
+    width: 100%;
+    height: 200px;
     box-shadow: 2px 2px 3px #111111;
 }
-*/
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    width: auto;
+    margin-top: -125px;
+    padding: 10px;
+    color: #fff9d2;
+    transition: 0.3s ease;
+    border-radius: 20px;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+}
+
+/* Position the "left button" to the left */
+.prev {
+    left: 0;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: #FF8473;
+    box-shadow: 1px 2.5px 5px #FF8473;
+    color: #ffffff;
+    transform: translateY(-2px);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #fff9d2;
+    padding: 15px;
+    font-size: 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/indicators */
+.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    background-color: #FFf9d2;
+    box-shadow: 2px 2px 3px #111111;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+#imageDots {
+    margin-top: -25px;
+    position: relative;
+    z-index: 10;
+}
+
+.active,
+.dot:hover {
+    background-color: #FF8473;
+    box-shadow: 0px 2.5px 5px #FF8473;
+    transform: translateY(-2px);
+    transition: ease 0.5s;
+}
+
+
+/* Fading animation */
+
+.fade {
+    animation: fade 1.0s ease 0s 1 normal forwards;
+
+}
+
+@keyframes fade {
+    from {
+        opacity: 1
+    }
+
+    to {
+        opacity: 1
+    }
+}
