--- a/Styles/dayDesign.css
+++ b/Styles/dayDesign.css
@@ -1,114 +1,112 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *:focus,
 *:active {
-    outline: none !important;
-    -webkit-tap-highlight-color: transparent;
+  outline: none !important;
+  -webkit-tap-highlight-color: transparent;
 }
-
 
 body {
-    background-image: linear-gradient(to bottom left, #FF8473, #FFF9D2);
-    font-family: Verdana;
-    width: 95%;
-    min-height: 100vh;
-    text-size-adjust: auto;
-    margin: 0 auto;
+  background-image: linear-gradient(to bottom left, #ff8473, #fff9d2);
+  font-family: Verdana;
+  width: 95%;
+  min-height: 100vh;
+  text-size-adjust: auto;
+  margin: 0 auto;
 }
 
-
 .navBar {
-    position: sticky;
-    z-index: 1100;
-    top: 10px;
-    width: 65px;
-    height: 65px;
-    margin-left: 30px;
-    border-radius: 20px;
-    top: 10px;
+  position: sticky;
+  z-index: 1100;
+  top: 10px;
+  width: 65px;
+  height: 65px;
+  margin-left: 30px;
+  border-radius: 20px;
+  top: 10px;
 }
 
 button {
-    transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
 button:hover {
-    background-color: #FF8473;
-    box-shadow: 0px 10px 15px #FF8473;
-    color: #ffffff;
-    transform: translateY(-5px);
+  background-color: #ff8473;
+  box-shadow: 0px 10px 15px #ff8473;
+  color: #ffffff;
+  transform: translateY(-5px);
 }
 
 button:active {
-    transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 
 #menuButtonsList {
-    list-style: none;
-    padding-left: 0;
-    align-items: left;
-    justify-content: left;
-    padding-top: 28px;
+  list-style: none;
+  padding-left: 0;
+  align-items: left;
+  justify-content: left;
+  padding-top: 28px;
 }
 
 .options {
-    cursor: pointer;
-    box-sizing: border-box;
+  cursor: pointer;
+  box-sizing: border-box;
 }
 
 .hide {
-    opacity: 0;
-    transition: 0.3s ease;
-    visibility: hidden;
+  opacity: 0;
+  transition: 0.3s ease;
+  visibility: hidden;
 }
 
 .menuButtonsTitle {
-    margin-top: 5px;
-    text-align: center;
-    font-size: small;
-    color: #111111;
-    transition: 0.3s ease;
+  margin-top: 5px;
+  text-align: center;
+  font-size: small;
+  color: #111111;
+  transition: 0.3s ease;
 }
 
 .menuButtons {
-    background-color: #FFF9D2;
-    box-shadow: 2px 2px 3px #252525;
+  background-color: #fff9d2;
+  box-shadow: 2px 2px 3px #252525;
 
-    width: 65px;
-    height: 65px;
+  width: 65px;
+  height: 65px;
 
-    border: none;
-    border-radius: 20px;
+  border: none;
+  border-radius: 20px;
 }
 
 #greeting {
-    margin-top: -20px;
+  margin-top: -20px;
 }
 
 .greeting,
 #socialMedia,
 h2 {
-    color: #252525;
-    text-shadow: 2px 2px 3px #fff9d2;
-    font-style: oblique;
+  color: #252525;
+  text-shadow: 2px 2px 3px #fff9d2;
+  font-style: oblique;
 }
 
 .mainPictures {
-    border-radius: 200px;
-    box-shadow: 2px 2px 3px #111111;
-    margin: 20px;
+  border-radius: 200px;
+  box-shadow: 2px 2px 3px #111111;
+  margin: 20px;
 }
 
 .infoCard,
 .projectCard {
-    background-color: #fff9d2;
-    border-radius: 10px;
-    box-shadow: 2px 2px 3px #111111;
-    padding: 20px;
-    margin: 20px;
-    width: 100%;
+  background-color: #fff9d2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px #111111;
+  padding: 20px;
+  margin: 20px;
+  width: 100%;
 }
 
 #contact,
@@ -117,323 +115,326 @@ h2 {
 #objectOriented,
 #other,
 .projectHeadings {
-    color: #FF8473;
-    text-shadow: 2px 2px 5px #FF8473;
-    font-style: oblique;
+  color: #ff8473;
+  text-shadow: 2px 2px 5px #ff8473;
+  font-style: oblique;
 }
 
 p {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: medium;
-    text-align: justify;
-    text-indent: 2em;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: medium;
+  text-align: justify;
+  text-indent: 2em;
 }
 
 .formButtons {
-    background-color: #FF8473;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 2px 2px 3px #111111;
-    color: #fff9d2;
-    padding: 10px;
-    margin: 5px;
-    resize: none;
+  background-color: #ff8473;
+  border: none;
+  border-radius: 20px;
+  box-shadow: 2px 2px 3px #111111;
+  color: #fff9d2;
+  padding: 10px;
+  margin: 5px;
+  resize: none;
 }
 
 .formButtons:focus {
-    box-shadow: 2px 2px 3px #FF8473;
+  box-shadow: 2px 2px 3px #ff8473;
 }
 
 .formButtons:active {
-    padding: 10px;
-    margin: 5px;
-    resize: none;
+  padding: 10px;
+  margin: 5px;
+  resize: none;
 }
 
 ::placeholder {
-    padding: 5px;
-    margin: 10px;
-    color: #fff9d2;
-    font-size: 13px;
+  padding: 5px;
+  margin: 10px;
+  color: #fff9d2;
+  font-size: 13px;
 }
 
 #firstName {
-    margin: 5px;
-    padding: 10px;
-    width: 39%;
+  margin: 5px;
+  padding: 10px;
+  width: 39%;
 }
 
 #lastName {
-    margin: 5px;
-    padding: 10px;
-    width: 38%;
+  margin: 5px;
+  padding: 10px;
+  width: 38%;
 }
 
 #email {
-    margin: 5px;
-    padding: 10px;
-    width: 80%;
+  margin: 5px;
+  padding: 10px;
+  width: 80%;
 }
 
 textarea {
-    margin: 5px;
-    padding: 12px 20px;
-    width: 80%;
-    height: 150px;
-    border-radius: 5px;
+  margin: 5px;
+  padding: 12px 20px;
+  width: 80%;
+  height: 150px;
+  border-radius: 5px;
 }
 
 #message::-webkit-scrollbar,
 .container::-webkit-scrollbar {
-    padding: 10px;
-    margin: 5px;
+  padding: 10px;
+  margin: 5px;
 }
 
 #message::-webkit-scrollbar-track,
 .container::-webkit-scrollbar-track {
-    background: #FF8473;
-    border: 2px solid #252525;
-    border-radius: 30px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    margin-top: 20px;
-    margin-bottom: 20px;
+  background: #ff8473;
+  border: 2px solid #252525;
+  border-radius: 30px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #message::-webkit-scrollbar-thumb,
 .container::-webkit-scrollbar-thumb {
-    background-color: #FFF9D2;
-    border-radius: 30px;
-    width: 90%;
-    border: 2px solid #252525;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #fff9d2;
+  border-radius: 30px;
+  width: 90%;
+  border: 2px solid #252525;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 #submitButton:hover {
-    background-color: #252525;
-    box-shadow: 2px 2px 3px #FF8473;
-    color: #FF8473;
+  background-color: #252525;
+  box-shadow: 2px 2px 3px #ff8473;
+  color: #ff8473;
 }
 
 li {
-    text-align: left;
+  text-align: left;
 }
 
 #link {
-    color: #FF8473;
+  color: #ff8473;
 }
 
 footer {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .socialMediaButton {
-    background-color: #fff9d2;
-    box-shadow: 2px 2px 3px #252525;
+  background-color: #fff9d2;
+  box-shadow: 2px 2px 3px #252525;
 
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 
-    border: none;
-    border-radius: 20px;
+  border: none;
+  border-radius: 20px;
 }
 
 .socialMediaTitles {
-    padding: 5px;
+  padding: 5px;
 }
-
 
 /* TECH STACK PAGE */
 .techStackCard {
-    background-color: #fff9d2;
-    border-radius: 10px;
-    box-shadow: 2px 2px 3px #111111;
-    width: 100%;
-    padding: 10px;
-    margin: 10px;
+  background-color: #fff9d2;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px #111111;
+  width: 100%;
+  padding: 10px;
+  margin: 10px;
 }
 
 .progLangCube {
-    background-color: #FF8473;
-    width: 100px;
-    height: 100px;
-    box-shadow: 2px 2px 3px #111111;
-    padding: 10px;
-    margin: auto;
-    margin-top: 25px;
-    border-radius: 20px;
-    transition: 0.3s ease;
+  background-color: #ff8473;
+  width: 100px;
+  height: 100px;
+  box-shadow: 2px 2px 3px #111111;
+  padding: 10px;
+  margin: auto;
+  margin-top: 25px;
+  border-radius: 20px;
+  transition: 0.3s ease;
 }
 
 .progLangCube:hover,
 .projectTitle:hover {
-    background-color: #FF8473;
-    box-shadow: 0px 10px 15px #FF8473;
-    color: #fff9d2;
-    transform: translateY(-5px);
+  background-color: #ff8473;
+  box-shadow: 0px 10px 15px #ff8473;
+  color: #fff9d2;
+  transform: translateY(-5px);
 }
 
 .progLangCube:active,
 .projectTitle:active {
-    transform: translateY(-1px);
+  transform: translateY(-1px);
 }
 
 .progLangName,
 .softwareName,
 .techName {
-    margin: auto;
-    padding-bottom: 2px;
-    font-size: 10px;
-    font-style: oblique;
-    font-weight: bold;
-    transition: 0.1s ease;
+  margin: auto;
+  padding-bottom: 2px;
+  font-size: 10px;
+  font-style: oblique;
+  font-weight: bold;
+  transition: 0.1s ease;
 }
 
 .progLangIcon {
-    z-index: 1100;
-    overflow: clip;
+  z-index: 1100;
+  overflow: clip;
 }
 
 /* PROJECTS PAGE*/
 #projectContainer {
-    display: flex;
-    overflow-x: scroll;
-    padding: 24px;
-    width: 99%;
-    scroll-snap-type: x mandatory;
-    scroll-padding: 24px;
-    border-radius: 20px;
-    gap: 12px;
+  display: flex;
+  overflow-x: scroll;
+  padding: 24px;
+  width: 99%;
+  scroll-snap-type: x mandatory;
+  scroll-padding: 24px;
+  border-radius: 20px;
+  gap: 12px;
 }
 
 .projectButton,
 .sourceCodeButton {
-    border-radius: 200px;
-    box-shadow: 2px 2px 3px #252525;
-    padding: 3px;
-    border: none;
-    background-color: #252525;
+  border-radius: 200px;
+  box-shadow: 2px 2px 3px #252525;
+  padding: 3px;
+  border: none;
+  background-color: #252525;
 }
 
 #projectContainer,
 .projectCard {
-    flex: 0 0 100%;
-    padding: 24px;
-    border-radius: 20px;
-    scroll-snap-align: start;
+  flex: 0 0 100%;
+  padding: 24px;
+  border-radius: 20px;
+  scroll-snap-align: start;
 }
 
 .projectTitle {
-    color: #fff9d2;
-    background-color: #252525;
-    border-radius: 200px;
-    box-shadow: 2px 2px 3px #111111;
-    margin: 10px;
-    padding: 5px;
-    width: 80%;
-    transition: 0.3s ease;
+  color: #fff9d2;
+  background-color: #252525;
+  border-radius: 200px;
+  box-shadow: 2px 2px 3px #111111;
+  margin: 10px;
+  padding: 5px;
+  width: 80%;
+  transition: 0.3s ease;
 }
 
 .projectDescription {
-    padding: 5px;
-    margin: 5px;
+  padding: 5px;
+  margin: 5px;
 }
 
 /* Image Slideshow */
 
 .projectImages {
-    border-radius: 20px;
-    width: 100%;
-    height: 200px;
-    box-shadow: 2px 2px 3px #111111;
+  border-radius: 20px;
+  width: 100%;
+  height: 200px;
+  box-shadow: 2px 2px 3px #111111;
 }
 
 .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
 
 /* Next & previous buttons */
 .prev,
 .next {
-    cursor: pointer;
-    position: absolute;
-    width: auto;
-    margin-top: -125px;
-    padding: 10px;
-    color: #fff9d2;
-    transition: 0.3s ease;
-    border-radius: 20px;
-    user-select: none;
+  cursor: pointer;
+  position: absolute;
+  width: auto;
+  margin-top: -125px;
+  padding: 10px;
+  color: #fff9d2;
+  transition: 0.3s ease;
+  border-radius: 20px;
+  user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-    right: 0;
+  right: 0;
 }
 
 /* Position the "left button" to the left */
 .prev {
-    left: 0;
+  left: 0;
 }
 
 .prev:hover,
 .next:hover {
-    background-color: #FF8473;
-    box-shadow: 1px 2.5px 5px #FF8473;
-    color: #ffffff;
-    transform: translateY(-2px);
+  background-color: #ff8473;
+  box-shadow: 1px 2.5px 5px #ff8473;
+  color: #ffffff;
+  transform: translateY(-2px);
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: #fff9d2;
-    padding: 15px;
-    font-size: 12px;
-    position: absolute;
-    top: 0;
+  color: #fff9d2;
+  padding: 15px;
+  font-size: 12px;
+  position: absolute;
+  top: 0;
 }
 
 /* The dots/indicators */
-.dot {
-    cursor: pointer;
-    height: 10px;
-    width: 10px;
-    background-color: #FFf9d2;
-    box-shadow: 2px 2px 3px #111111;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.3s ease;
+.dot1,
+.dot2,
+.dot3 {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  background-color: #fff9d2;
+  box-shadow: 2px 2px 3px #111111;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
 }
 
-#imageDots {
-    margin-top: -25px;
-    position: relative;
-    z-index: 10;
+#imageDots1,
+#imageDots2,
+#imageDots3 {
+  margin-top: -30px;
+  position: relative;
+  z-index: 10;
 }
 
 .active,
-.dot:hover {
-    background-color: #FF8473;
-    box-shadow: 0px 2.5px 5px #FF8473;
-    transform: translateY(-2px);
-    transition: ease 0.5s;
+.dot1:hover,
+.dot2:hover,
+.dot3:hover {
+  background-color: #ff8473;
+  box-shadow: 0px 2.5px 5px #ff8473;
+  transform: translateY(-2px);
+  transition: ease 0.5s;
 }
 
-
 /* Fading animation */
-
 .fade {
-    animation: fade 1.0s ease 0s 1 normal forwards;
-
+  animation: fade 1s ease 0s 1 normal forwards;
 }
 
 @keyframes fade {
-    from {
-        opacity: 1
-    }
+  from {
+    opacity: 1;
+  }
 
-    to {
-        opacity: 1
-    }
+  to {
+    opacity: 1;
+  }
 }
